--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   table_calendar: ^3.1.2
   syncfusion_flutter_calendar: ^20.2.46
   calendar_view: ^1.2.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
