--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   syncfusion_flutter_calendar: ^20.2.46
   calendar_view: ^1.2.0
   intl: ^0.19.0
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
